--- a/.github/workflows/matrix-btop-make-and-release.yml
+++ b/.github/workflows/matrix-btop-make-and-release.yml
@@ -56,6 +56,11 @@ jobs:
       - name: Docker - apk install build deps
         run: docker exec --env-file env.custom -w /root multiarch apk add autoconf automake bash bash-completion bison build-base coreutils cmake ccache curl findutils flex git graphviz libarchive-tools libtool linux-headers ncurses-dev patch perl pkgconf python3 python3-dev re2c rsync rsync texinfo ttf-freefont xz zip
 
+      - name: Docker target - install musl-cross-make ${{ matrix.CHOST }}
+        run: |
+          docker exec --env-file env.custom multiarch curl -sL "https://github.com/userdocs/musl-cross-make/releases/latest/download/${{ matrix.CHOST }}.tar.gz" > "${{ matrix.CHOST }}.tar.gz"
+          docker exec --env-file env.custom multiarch tar xf "${{ matrix.CHOST }}.tar.gz" --strip-components=1 -C /usr/local
+
       - name: Docker - Git clone btop
         run: docker exec --env-file env.custom -w /root multiarch git clone --single-branch --branch "master" --shallow-submodules --recurse-submodules --depth 1 https://github.com/aristocratos/btop.git btop
 
