--- a/.github/workflows/matrix-btop-make-and-release.yml
+++ b/.github/workflows/matrix-btop-make-and-release.yml
@@ -37,7 +37,7 @@ jobs:
         run: sudo apt-get -y upgrade
 
       - name: Host - Install host qemu-static
-        run: sudo apt-get install -y qemu binfmt-support qemu-user-static
+        run: sudo apt-get install -y qemu binfmt-support qemu-user-static curl
 
       - name: Host - Docker multiarch bootstrap
         run: sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
@@ -70,14 +70,17 @@ jobs:
       - name: Docker - archive ${{ matrix.CHOST }} toolchain
         run: docker exec --env-file env.custom -w /root multiarch tar -czvf ${{ matrix.CHOST }}.tar.gz btop-completed
 
+      - name: Host - Set btop version
+        run: echo "btop_version=$(curl -sL https://raw.githubusercontent.com/aristocratos/btop/main/src/btop.cpp | sed -rn 's|(.*)const string Version = "(.*)";|\2|p')" >> $GITHUB_ENV
+
       - name: Create release - tag - assets
         uses: ncipollo/release-action@v1.8.10
         with:
           prerelease: false
           artifacts: "${{ matrix.CHOST }}.tar.gz"
           replacesArtifacts: true
-          tag: "2021"
-          name: "btop toolchains"
-          bodyFile: "realease_body.md"
+          tag: "v${{ env.btop_version }}"
+          name: "btop ${{ env.btop_version }} "
+          bodyFile: "btop ${{ env.btop_version }} built using https://github.com/userdocs/musl-cross-make"
           allowUpdates: true
-          token: ${{ secrets.TEST }}
+          token: ${{ secrets.GITHUB_TOKEN }}
