--- a/.github/workflows/matrix-btop-make-and-release.yml
+++ b/.github/workflows/matrix-btop-make-and-release.yml
@@ -12,17 +12,62 @@ jobs:
         name: [btop]
         os_id: [alpine]
         os_version_id: [edge]
-        CHOST:
+        arch_type:
           [
-            x86_64-linux-musl,
-            arm-linux-musleabihf,
-            armv5l-linux-musleabihf,
-            armv6-linux-musleabihf,
-            armv7r-linux-musleabihf,
             aarch64-linux-musl,
+            aarch64_be-linux-musl,
+            arm-linux-musleabi,
+            arm-linux-musleabihf,
+            armeb-linux-musleabi,
+            armeb-linux-musleabihf,
+            armel-linux-musleabi,
+            armel-linux-musleabihf,
+            armv5l-linux-musleabi,
+            armv5l-linux-musleabihf,
+            armv6-linux-musleabi,
+            armv6-linux-musleabihf,
+            armv7l-linux-musleabihf,
+            armv7m-linux-musleabi,
+            armv7r-linux-musleabihf,
+            i486-linux-musl,
+            i686-linux-musl,
+            m68k-linux-musl,
+            microblaze-linux-musl,
+            microblazeel-linux-musl,
+            mips-linux-musl,
+            mips-linux-muslsf,
+            mips-linux-musln32sf,
+            mips64-linux-musl,
+            mips64-linux-musln32,
+            mips64-linux-musln32sf,
+            mips64el-linux-musl,
+            mips64el-linux-musln32,
+            mips64el-linux-musln32sf,
+            mipsel-linux-musl,
+            mipsel-linux-musln32,
+            mipsel-linux-musln32sf,
+            mipsel-linux-muslsf,
+            or1k-linux-musl,
+            powerpc-linux-musl,
+            powerpc-linux-muslsf,
+            powerpc64-linux-musl,
+            powerpc64le-linux-musl,
+            powerpcle-linux-musl,
+            powerpcle-linux-muslsf,
+            riscv32-linux-musl,
+            riscv64-linux-musl,
+            s390x-linux-musl,
+            sh2-linux-musl,
+            sh2-linux-muslfdpic,
+            sh2eb-linux-musl,
+            sh2eb-linux-muslfdpic,
+            sh4-linux-musl,
+            sh4eb-linux-musl,
+            x86_64-linux-musl,
+            x86_64-linux-muslx32,
           ]
 
-    name: ${{ matrix.name }} ${{ matrix.CHOST }}
+    name: ${{ matrix.name }} ${{ matrix.arch_type }}
 
     env:
       prerelease: false
@@ -45,7 +90,7 @@ jobs:
       - name: Host - Create Docker template env file
         run: |
           echo "PATH=/root/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" > env.custom
-          echo "LD_LIBRARY_PATH=/root/lib:/root/${{ matrix.CHOST }}/lib" >> env.custom
+          echo "LD_LIBRARY_PATH=/root/lib:/root/${{ matrix.arch_type }}/lib" >> env.custom
 
       - name: Host - Create docker multiarch ${{ matrix.arch }} container
         run: docker run --name multiarch -it -d --env-file env.custom -w /root -v ${{ github.workspace }}:/root ${{ matrix.os_id }}:${{ matrix.os_version_id }}
@@ -53,22 +98,22 @@ jobs:
       - name: Docker - apk install build deps
         run: docker exec --env-file env.custom -w /root multiarch apk add autoconf automake bash bash-completion bison build-base coreutils cmake ccache curl findutils flex git graphviz libarchive-tools libtool linux-headers ncurses-dev patch perl pkgconf python3 python3-dev re2c rsync rsync texinfo ttf-freefont xz zip
 
-      - name: Docker target - install musl-cross-make ${{ matrix.CHOST }}
+      - name: Docker target - install musl-cross-make ${{ matrix.arch_type }}
         run: |
-          docker exec --env-file env.custom multiarch curl -sL "https://github.com/userdocs/musl-cross-make/releases/latest/download/${{ matrix.CHOST }}.tar.gz" > "${{ matrix.CHOST }}.tar.gz"
-          docker exec --env-file env.custom multiarch tar xf "${{ matrix.CHOST }}.tar.gz" --strip-components=1 -C /usr/local
+          docker exec --env-file env.custom multiarch curl -sL "https://github.com/userdocs/musl-cross-make/releases/latest/download/${{ matrix.arch_type }}.tar.gz" > "${{ matrix.arch_type }}.tar.gz"
+          docker exec --env-file env.custom multiarch tar xf "${{ matrix.arch_type }}.tar.gz" --strip-components=1 -C /usr/local
 
       - name: Docker - Git clone btop
         run: docker exec --env-file env.custom -w /root multiarch git clone --single-branch --branch "main" --shallow-submodules --recurse-submodules --depth 1 https://github.com/aristocratos/btop.git btop
 
-      - name: Docker - build ${{ matrix.CHOST }} toolchain
-        run: docker exec --env-file env.custom -w /root/btop multiarch make STATIC=true STRIP=true ARCH=${{ matrix.CHOST }} -j"$(nproc)" CHOST=${{ matrix.CHOST }} CC=${{ matrix.CHOST }}-gcc AR=${{ matrix.CHOST }}-ar CXX=${{ matrix.CHOST }}-g++
+      - name: Docker - build ${{ matrix.arch_type }} toolchain
+        run: docker exec --env-file env.custom -w /root/btop multiarch make STATIC=true STRIP=true ARCH=${{ matrix.arch_type }} -j"$(nproc)" arch_type=${{ matrix.arch_type }} CC=${{ matrix.arch_type }}-gcc AR=${{ matrix.arch_type }}-ar CXX=${{ matrix.arch_type }}-g++
 
-      - name: Docker - install ${{ matrix.CHOST }} toolchain
+      - name: Docker - install ${{ matrix.arch_type }} toolchain
         run: docker exec --env-file env.custom -w  /root/btop multiarch make install PREFIX=/root/btop-completed
 
-      - name: Docker - archive ${{ matrix.CHOST }} toolchain
-        run: docker exec --env-file env.custom -w /root multiarch tar -czvf ${{ matrix.CHOST }}.tar.gz btop-completed
+      - name: Docker - archive ${{ matrix.arch_type }} toolchain
+        run: docker exec --env-file env.custom -w /root multiarch tar -czvf ${{ matrix.arch_type }}.tar.gz btop-completed
 
       - name: Host - Set btop version
         run: echo "btop_version=$(curl -sL https://raw.githubusercontent.com/aristocratos/btop/main/src/btop.cpp | sed -rn 's|(.*)const string Version = "(.*)";|\2|p')" >> $GITHUB_ENV
@@ -77,7 +122,7 @@ jobs:
         uses: ncipollo/release-action@v1.8.10
         with:
           prerelease: false
-          artifacts: "${{ matrix.CHOST }}.tar.gz"
+          artifacts: "${{ matrix.arch_type }}.tar.gz"
           replacesArtifacts: true
           tag: "v${{ env.btop_version }}"
           name: "btop ${{ env.btop_version }} "
